# risk-engine-platform

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CODE_STANDARDS.md  DEVELOPMENT_PLAN.md  IDENTITY.md  Makefile  PROGRESS.md  QUICK_START.md  README.md  USER.md  analysis_dedup_pass_rate_v2.js  analysis_merchant.js  analysis_merchant_v2.js  analysis_merchant_v3.js  analysis_tb_full_history.js  analysis_tb_full_history_final.js  analysis_tb_quality.js  analysis_tb_users.js  analysis_vintage_deterioration.js  analyze_feb2026.js  analyze_hunan_pack_pass_overdue.js  analyze_hunan_pack_pass_overdue_v2.js  analyze_hunan_public.js  analyze_monthly_tb.js  check_vintage_tb.js  dev_simulation.py  diagnose_join.js  fill_monthly_report.js  hunan_vintage_analysis.js  hunan_vintage_final.js  monthly_routine_monitor.js  package-lock.json  package.json  pyproject.toml  query_monitor_dimensions.js  query_pass_rate.js  query_store.py  query_tepi_analysis.js  (+9 more)
.github/workflows/: cd.yml  ci.yml
backend/: README.md  __init__.py
backend/api/: __init__.py  dependencies.py  errors.py
backend/api/middleware/: __init__.py
backend/api/routes/: __init__.py  sync.py
backend/api/schemas/: __init__.py
backend/cache/: __init__.py
backend/config/: __init__.py  settings.py
backend/database/: __init__.py  init.py  read_write_split.py
backend/message_queue/: __init__.py
backend/observability/: __init__.py
backend/services/: __init__.py
config/: database.py  email_service.py  github_config.py
data/: monitoring.py
data/simulations/: .gitignore  sim_全国_20260528_1628.md  sim_全国_20260528_1640.md  sim_全国_20260528_1647.md  sim_江西省_20260528_1548.md  sim_江西省_20260528_1600.md  sim_江西省_20260528_1607.md  sim_江西省_20260528_1609.md  sim_江西省_20260528_1611.md
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
examples/: usage_examples.py
frontend/: README.md
models/: model_trainer.py
risk_engine/: README.md  __init__.py
risk_engine/config/: __init__.py  db_config.py  settings.py
risk_engine/core/: __init__.py
risk_engine/decision_engine/: __init__.py  orchestrator.py  output_schema.py
risk_engine/feature_store/: __init__.py  registry.py  validator.py
risk_engine/model_registry/: __init__.py  evaluator.py
risk_engine/rating/: base.py  代理商综合评级体系说明.md
risk_engine/simulation/: __init__.py  __main__.py  classifier.py  data.py  dev_simulation.py  estimator.py  pipeline.py  report.py  snapshot.py
risk_engine/toolkit/: __init__.py
tasks/: gen_report_v2.js  generate_monthly_report.py  generate_report.js  pass_rate.js  province_analysis.js  province_public.js  public_analysis.js  query_channel.js  query_store_analysis.js  query_v2.js
tests/: conftest.py
tests/integration/: test_placeholder.py
tests/unit/: test_placeholder.py
(+77 files in other folders)
