[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["risk_engine*", "backend*"]

[project]
name = "risk-engine-platform"
version = "0.1.0"
description = "风控引擎决策分析平台 — 淘顺实时授信风控系统"
requires-python = ">=3.12"
authors = [
    {name = "Jingluo", email = "hec@topshake.cn"},
]

dependencies = [
    # API 框架
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",

    # 数据处理
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",

    # 数据库驱动
    "psycopg2-binary>=2.9.0",
    "mysqlclient>=2.2.0",

    # 消息队列
    "aiokafka>=0.10.0",

    # 缓存
    "redis>=5.1.0",

    # 机器学习
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.0",

    # 可观测性
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "prometheus-client>=0.20.0",

    # 任务调度
    "celery>=5.4.0",

    # 工具
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "UP", "N", "SIM"]  # I 由独立 isort 负责

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"**/migrations/env.py" = ["E402"]
"**/analysis_report.py" = ["E501"]
"**/extract.py" = ["E501"]
"**/sync_all.py" = ["E501"]
"**/sync_runner.py" = ["E501"]
"**/sync/scheduler.py" = ["E501"]
"**/connectors/db_connector.py" = ["E501", "N801"]
"**/simulation/data.py" = ["E501"]
"**/runner.py" = ["E501"]
"**/core/models/base.py" = ["N803"]
"**/supplier/run.py" = ["N806"]
"**/supplier/rate.py" = ["N806"]
"**/store/run.py" = ["N806"]
"**/supplier/analysis_report.py" = ["SIM108"]


[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true

# 先降低严格度，后续逐步收紧
check_untyped_defs = false
disable_error_code = ["type-arg", "var-annotated", "union-attr", "no-untyped-def", "no-untyped-call", "assignment", "misc", "attr-defined", "return-value", "valid-type"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=risk_engine --cov=backend --cov-report=term-missing"

[tool.coverage.run]
source = ["risk_engine", "backend"]
branch = true
